minor edit/housekeeping activity

--- a/src/pages/t/do-olls-that-will-talk/index.astro
+++ b/src/pages/t/do-olls-that-will-talk/index.astro
@@ -61,7 +61,7 @@ import "./_score.css";
   </section>
 
   <section>
-    <h2>Bublé: on the Beat</h2>
+    <h2>Bublé: On the Beat</h2>
     <p>
       Let’s start with one of the most famous contemporary versions. Bublé,
       smooth as ever, sits squarely on the beat.
@@ -83,7 +83,7 @@ import "./_score.css";
   </section>
 
   <section>
-    <h2>Como and the Fontane Sisters: the Canonical Version</h2>
+    <h2>Como and the Fontane Sisters: The Canonical Version</h2>
     <p>
       Now for the original. Here, "dolls" arrives slightly before the bar. The
       first time around it’s sung by the Fontane Sisters; keep listening to hear
