--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,9 @@ const { title, description, current } = Astro.props;
   </head>
   <body>
     <Header current={current} />
-    <article>
+    <main>
       <slot />
-    </article>
+    </main>
     <Footer />
   </body>
 </html>
