minor edit/housekeeping activity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import Layout from "@/layouts/Layout.astro";
             <a href="/t/patch-learn" rel="category">Patch Practice Ladder</a>
           </li>
           <li>
-            <a href="/t/beats-learn" rel="category">Beat Practice Ladder</a>
+            <a href="/t/beat-learn" rel="category">Beat Practice Ladder</a>
           </li>
         </ul>
       </nav>
