minor edit/housekeeping activity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Layout from "@/layouts/Layout.astro";
       <h2>Have a Cup of Tea</h2>
 
       <p>
-        <a href="/v/tea-time.html">A timer for brewing your tea.</a>
+        <a href="/v/tea-time/tea-time.html">A timer for brewing your tea.</a>
         And more. Built mostly by Claude.
       </p>
     </section>
