--- a/src/pages/hello.astro
+++ b/src/pages/hello.astro
@@ -2,9 +2,13 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="About - goude.se" description="About goude.se" current="about">
+<Layout
+  title="Hello - goude.se"
+  description="Hello from goude.se"
+  current="hello"
+>
   <section>
-    <h1 id="colophon">About</h1>
+    <h1 id="colophon">Hello</h1>
     <p>
       <a
         href="https://www.buymeacoffee.com/goude"
